<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="title"
            type="com.example.unitcoverter.Title" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Spinner
            android:id="@+id/conversion_select"
            android:layout_width="214dp"
            android:layout_height="42dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.121"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/converter_text"
            app:layout_constraintVertical_bias="0.04" />

        <TextView
            android:id="@+id/converter_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@{title.title}"
            android:textSize="24sp"
            app:layout_constraintHorizontal_bias="0.149"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/converter_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintEnd_toStartOf="@+id/convert_btn"
            app:layout_constraintHorizontal_bias="0.373"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/converter_title" />

        <Button
            android:id="@+id/convert_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:text="Convert"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/converter_title" />

        <TextView
            android:id="@+id/converter_text"
            android:layout_width="64dp"
            android:layout_height="23dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/convert_btn"
            app:layout_constraintHorizontal_bias="0.126"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/converter_input" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>